# agent-dashboard

./: .env.example  .gitattributes  .gitignore  AGENT_GUIDELINES.md  CONTRIBUTING.md  LICENSE  PRIORITIZATION.md  PROJECT_PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json
api/: Dockerfile  alembic.ini  docker-entrypoint-reset-db.sh  docker-entrypoint.sh  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 202409230001_initial_core_tables.py  202409230002_personas_registry.py  202409230003_bug_tracker.py  202409230004_event_log.py  202409240001_project_status.py  202510060001_external_id_and_slugs.py  5c2b1b9e3a7f_add_repository_path_to_projects.py  a9b1c2d3e4f5_add_milestone_slug.py  b2c3d4e5f6a7_add_tasks_external_id_and_attachments.py  c3d4e5f6a7b8_add_external_project_index_and_milestone_unique.py  d4e5f6a7b8c9_backfill_tasks_project_id.py  f021487b4d37_initial_schema.py
api/app/: db.py  main.py  models.py  openapi.yml  openapi_running.json  schemas.py  services.py
api/app/routes/: __init__.py  bugs.py  context.py  events.py  milestones.py  personas.py  projects.py  tasks.py  well_known.py
api/app/scripts/: generate_openapi_yaml.py  import_execution_plan.py
api/app/services/: context_repo.py
backend/: openapi.yaml  package.json  tsconfig.json
docs/: API_Routes.md  Execution_Plan_Dogfood_MVP.md  Multi-Agent-Project-Dashboard_SPEC.md  a1b2c3d4e5f6_add_milestone_slug.py  agent_prompt_event_stream.md  agent_prompts.md  context_repository_prompt.md  log-summary-PROJECT_PLAN.md  manual-tests.md  personas.json  (+3 more)
(+80 files in other folders)
