[tool.poetry]
name = "madb-api"
version = "0.1.0"
description = "Multi-Agent Dashboard API"
authors = ["47 Sunset Studios <dev.team@47sunsetstudios.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
SQLAlchemy = "^2.0"
psycopg = {version = "^3.2", extras=["binary"]}
pydantic = "^2.8"
python-dotenv = "^1.0"
redis = "^5.0"
alembic = "^1.13"

[tool.poetry.scripts]
serve = "app.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
